--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
 
     <application
+        android:name="pl.wsei.pam.lab06.TodoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
+        <activity
+            android:name="pl.wsei.pam.lab06.Lab06Activity"
+            android:exported="false" />
         <activity
             android:name="pl.wsei.pam.lab03.Lab03Activity"
             android:exported="false" />
@@ -30,6 +37,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name="pl.wsei.pam.lab06.NotificationBroadcastReceiver"
+            android:enabled="true"
+            />
     </application>
 
 </manifest>
